--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -51,6 +51,9 @@
 			<trans-unit id="project.gitbranch.description">
 				<source>Default is master</source>
 			</trans-unit>
+			<trans-unit id="project.php">
+				<source>PHP Version</source>
+			</trans-unit>
 
 			<trans-unit id="group">
 				<source>Housekeeping: Group</source>
