[FEATURE] add installed extension versions

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -81,6 +81,9 @@
 			<trans-unit id="package.version">
 				<target>Version</target>
 			</trans-unit>
+			<trans-unit id="package.latest">
+				<target>Latest</target>
+			</trans-unit>
 
 			<trans-unit id="project.tab.project">
 				<target>Projekt</target>
