--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -130,6 +130,19 @@
 				<source>n.a.</source>
 			</trans-unit>
 
+			<trans-unit id="widget.extensions.project">
+				<source>Project</source>
+			</trans-unit>
+			<trans-unit id="widget.extensions.packages">
+				<source>Packages</source>
+			</trans-unit>
+			<trans-unit id="widget.extensions.version">
+				<source>Project</source>
+			</trans-unit>
+			<trans-unit id="widget.extensions.latest">
+				<source>Latest</source>
+			</trans-unit>
+
 			<trans-unit id="widgets.projects.title">
 				<source>My TYPO3 versions</source>
 			</trans-unit>
@@ -141,6 +154,13 @@
 			</trans-unit>
 			<trans-unit id="widgets.phpversions.description">
 				<source>Lists projects by PHP version</source>
+			</trans-unit>
+
+			<trans-unit id="widgets.extensions.title">
+				<source>My extensions</source>
+			</trans-unit>
+			<trans-unit id="widgets.extensions.description">
+				<source>Lists extensions by projects</source>
 			</trans-unit>
 		</body>
 	</file>
